--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "devtools": "react-devtools"
   },
   "jest": {
     "preset": "jest-expo"
@@ -22,6 +23,7 @@
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
+    "react-devtools": "^3.2.3",
     "react-native": "~0.55.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
