--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.3.1",
     "react-devtools": "^3.2.3",
     "react-native": "~0.55.2",
+    "react-navigation": "^2.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
