--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@appandflow/touchable": "^2.0.0",
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
